hopefully it works

--- a/assets/css/kosik.css
+++ b/assets/css/kosik.css
@@ -213,7 +213,7 @@ footer {
     margin-bottom: 10px;
 }
 
-#addedToCart {
+#coupon_load {
     /*position: fixed;
     bottom: 20px;*/
     position: relative;
