--- a/assets/css/payment-resp.css
+++ b/assets/css/payment-resp.css
@@ -9,6 +9,10 @@
         margin-top: 25px;
         margin-bottom: 25px;
     }
+
+    #removeCoupon {
+        left: 20px;
+    }
 }
 
 /* LARGE DEVICES */
